--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,16 +10,18 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-
+  font-family: "Open Sans", sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
+li {
+  list-style-type: none;
+}
+
 .imge-box {
   width: 100%;
   height: 100%;
@@ -27,32 +31,45 @@ a {
   border-radius: 2xl;
 }
 
-.placeholder_image{
+.placeholder_image {
   object-fit: contain;
   width: 100%;
   height: 100%;
-  padding: 0em 20em;
+  padding: 0em 20vw;
 }
-.offering_layout{
-  display:flex;
+
+@media (max-width: 768px) {
+  .placeholder_image {
+    padding: 0em 10vw;
+  }
+}
+
+@media (max-width: 576px) {
+  .placeholder_image {
+    padding: 0em 5vw;
+  }
+}
+
+@media (max-width: 375px) {
+  .placeholder_image {
+    padding: 0em 2vw;
+  }
+}
+.offering_layout {
+  display: flex;
   flex-direction: column;
-  gap:4em;
+  gap: 4em;
   margin-bottom: 4em;
   padding: 0em 2vw;
-
 }
-.centre{
+.centre {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 @media (max-width: 768px) {
-
-  .offering_layout{
-   
-    gap:1em;
+  .offering_layout {
+    gap: 1em;
+  }
 }
-}
-
-
